--- a/sandbox/parser_det_4.html
+++ b/sandbox/parser_det_4.html
@@ -44,6 +44,13 @@
             width: 350px;
         }
 
+        .line-trunc {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            width: 120px;
+        }
+
         tbody>tr {
             background-color: var(--color-10);
             box-shadow: 0px 0px 9px 0px var(--color-40);
@@ -178,16 +185,14 @@
                 <table>
                     <thead>
                         <tr>
-                            <th class="w120">Cell Name</th>
-                            <th class="w350">Cell Selector</th>
-                            <th class="w120">Action</th>
+                            <th colspan="3">Cell Configuration</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td><input type="text" class="inpt-shadowed" placeholder="&nbsp;" /></td>
-                            <td><input type="text" class="inpt-shadowed" placeholder="&nbsp;" /></td>
-                            <td>
+                            <td class="w120"><input type="text" class="inpt-shadowed" placeholder="Name" /></td>
+                            <td class="w350"><input type="text" class="inpt-shadowed" placeholder="Selector" /></td>
+                            <td class="w120">
                                 <input type="button" class="btn btn-small" value="Remove" />
                             </td>
                         </tr>
@@ -207,32 +212,114 @@
                 <input type="button" class="btn" value="Cancel" />
             </div>
 
-            <div class="control-row">
+            <div class="control-rowf" style="overflow-x: auto;">
                 <table>
-                    <caption><span class="table-title">Crawling Preview</span> 
-                        <!--span style="float: right;">
-                        <span>
-                            <input type="text" class="inpt-filter inpt-shadowed" placeholder="Find Parser" />
-                        </span>
-                        <span>
-                            <input type="button" class="btn btn-small" value="Add Parser" />
-                        </span>
-                        </span--> 
-                    </caption>
                     <thead>
                         <tr>
-                            <th class="w120">Col1</th>
-                            <th class="w120">Col2</th>
-                            <th class="w120">Col3</th>
-                            <th class="w120">Col4</th>
-                            <th class="w120">Col5</th>
+                            <th>Col1</th>
+                            <th>Col2</th>
+                            <th>Col3</th>
+                            <th>Col4</th>
+                            <th>Col5</th>
+                            <th>Col6</th>
+                            <th>Col7</th>    
+                            <th>Col1</th>
+                            <th>Col2</th>
+                            <th>Col3</th>
+                            <th>Col4</th>
+                            <th>Col5</th>
+                            <th>Col6</th>
+                            <th>Col7</th>  
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>
+                                <div class="line-trunc">Col1 dddddddddddddddddddddddddddddddddddddddddd</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col2 fffffffffffffffffffffffffffffffffffff</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col3 dddddddddddddddddddddddddddddd</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col4 bbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col5 wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col6 bbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col7 wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col1 dddddddddddddddddddddddddddddddddddddddddd</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col2 fffffffffffffffffffffffffffffffffffff</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col3 dddddddddddddddddddddddddddddd</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col4 bbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col5 wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col6 bbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col7 wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="line-trunc">Col1 dddddddddddddddddddddddddddddddddddddddddd</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col2 fffffffffffffffffffffffffffffffffffff</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col3 dddddddddddddddddddddddddddddd</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col4 bbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col5 wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col6 bbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col7 wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col1 dddddddddddddddddddddddddddddddddddddddddd</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col2 fffffffffffffffffffffffffffffffffffff</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col3 dddddddddddddddddddddddddddddd</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col4 bbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col5 wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col6 bbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
+                            </td>
+                            <td>
+                                <div class="line-trunc">Col7 wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww</div>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
